@@ -2,6 +2,10 @@
 
 Tue Mar 22 11:10:53 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>
 
+ - fentonups.h, driver.list: add support for Sysgration UPGUARDS Pro650
+
+   (Simon J. Rowe) [Alioth Patch #301281]
+   
  - energizerups: fix for Linux 2.6 byte dropping
 
    (Viktor T. Toth) [Alioth Patch #301279]
